# proxy-manager

./: .gitignore  AUTHORIZATION_FIX.md  AUTHORIZE_BUTTON_FIX.md  COMPLETE_DEMO_STEPS.md  DEMONSTRATION_GUIDE.md  FINAL_PUSH_STEPS.md  FIX_BCRYPT_ISSUE.md  FIX_REGISTER_ERROR.md  HOW_TO_ADD_PROXIES.md  HOW_TO_AUTHORIZE.md  HOW_TO_RUN.md  HOW_TO_USE_GUIDE.md  JUDGES_PRESENTATION.md  PUSH_TO_GITHUB.md  QUICK_FIX_401.md  QUICK_START.md  QUICK_START_COMPLETE.md  QUICK_START_SCRAPING.md  README.md  README_FRONTEND.md  REGISTRATION_FIX.md  RUN_ON_MY_SYSTEM.md  SIMPLE_AUTHORIZATION.md  STEP4_FIX.md  SUMMARY.md  TROUBLESHOOTING.md  WEB_SCRAPING_GUIDE.md  WORKING_WEB_SCRAPING.md  package-lock.json  package.json  run_server.sh  web_scraping_with_proxy.py
backend/: demo_scraping.py  pyproject.toml  simple_proxy_test.py
backend/mitm_forwarder/: Dockerfile  README.md  requirements.txt
backend/mitm_forwarder/src/mitm_forwarder/: __main__.py  config.py  logger.py  proxy_client.py
backend/mitm_forwarder/tests/: conftest.py  test_blacklist.py  test_proxy_client.py  test_proxy_client_auth.py
backend/proxy_manager/: run_server.sh
backend/proxy_manager/src/proxy_manager/: __main__.py  auth.py  crud.py  database.py  models.py
backend/proxy_manager/src/proxy_manager/routers/: api_key_routes.py  blacklist_routes.py  health_routes.py  log_routes.py  proxy_routes.py
backend/proxy_manager/src/proxy_manager/utils/: blacklist.py  config.py  csv_exporter.py  generate_api_key.py  proxy_tester.py
backend/proxy_manager/tests/: __init__.py  conftest.py  test_api_key_auth.py  test_api_key_crud.py  test_api_key_e2e.py  test_api_key_edge_cases.py  test_api_key_integration.py  test_api_key_routes.py  test_api_key_security.py
docs/: ACCESSIBILITY.md  DESIGN_TOKENS.md
mitm_forwarder/: pyproject.toml
mitm_forwarder/src/mitm_forwarder/: __main__.py  blacklist_cache.py  config.py  mitm_forwarder_addon.py  proxy_client.py
proxy_manager/: pyproject.toml
proxy_manager/src/proxy_manager/: __main__.py  auth.py  crud.py  database.py  main.py  models.py  scheduler.py
proxy_manager/src/proxy_manager/routers/: admin_routes.py  auth_routes.py  blacklist_routes.py  log_routes.py  proxy_routes.py  rate_limit.py
proxy_manager/src/proxy_manager/utils/: csv_exporter.py  logger.py  proxy_tester.py  rotation.py
(+50 files in other folders)
