[project]
name = "mitm-forwarder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adikpb", email = "67222969+adikpb@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mitmproxy>=12.1.2",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
