[project]
name = "proxy-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adikpb", email = "67222969+adikpb@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
